moved "custom config" files as they are unfinished and mostly unused

--- a/hypr/custom-configs/hyprland.conf
+++ b/hypr/custom-configs/hyprland.conf
@@ -1,8 +1,7 @@
+# Credit to https://github.com/1amSimp1e/dots for a lot of this config
+
 # Monitors
 source=/home/sid/.config/hypr/monitors.conf
-#monitor=eDP-1,1920x1080@60,0x0,1 # Laptop screen
-#monitor=HDMI-A-1,2560x1440,auto,1 # Secondary Monitor
-#monitor=,preferred,auto,1 # Fallback from Wiki for plugging in random monitors
 
 # Status Bar
 exec-once=waybar
@@ -11,7 +10,7 @@ exec-once=waybar
 exec-once=dunst
 
 # Wallpaper
-# TO-DO
+exec-once=swaybg -o \* -i /home/sid/.config/hypr/wallpapers/dojo.PNG -m fill
 
 # For Screen Sharing
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
